CI: set git dir safe
This is a workaround for fixing the following bitbucket error:

fatal: detected dubious ownership in repository at
'/opt/atlassian/pipelines/agent/build/zephyr'
To add an exception for this directory, call:
	git config --global --add safe.directory
        /opt/atlassian/pipelines/agent/build/zephyr
FATAL ERROR: command exited with status 128:
remote add -- upstream https://github.com/zephyrproject-rtos/zephyr

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -18,6 +18,8 @@ pipelines:
         script:
           - echo "Starting build"
           - unset ZEPHYR_BASE
+          - pwd
+          - git config --global --add safe.directory $(pwd)/zephyr
           - cd app
           - west update
           - west zephyr-export
