scripts: add support for custom west commands

--- a/manifest_dir/west.yml
+++ b/manifest_dir/west.yml
@@ -26,3 +26,4 @@ manifest:
       path: modules/lib/memfault-firmware-sdk
   self:
     path: manifest_dir
+    west-commands: scripts/west-commands.yml
