--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,24 +11,20 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-        with:
-          path: example-application
 
       - name: Initialize
-        working-directory: example-application
+        working-directory: app
         run: |
-          pip3 install -U west
-          west init -l .
           west update
           pip3 install -r ../zephyr/scripts/requirements-base.txt
 
       - name: Build firmware
-        working-directory: example-application
+        working-directory: app
         run: |
-          west build -b custom_plank app
+          west build -b myboard
 
       - name: Archive firmware
         uses: actions/upload-artifact@v2
         with:
           name: firmware
-          path: example-application/build/zephyr/zephyr.*
+          path: app/build/zephyr/zephyr.*
