--- a/manifest/west.yml
+++ b/manifest/west.yml
@@ -9,7 +9,7 @@ manifest:
   projects:
     - name: zephyr
       remote: upstream
-      revision: v3.2.0
+      revision: v3.3-branch
       west-commands: scripts/west-commands.yml
       import:
         name-allowlist:
