--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -20,4 +20,12 @@ project(app LANGUAGES C VERSION 1.0.0)
 configure_file(app_version.h.in ${CMAKE_BINARY_DIR}/app/include/app_version.h)
 target_include_directories(app PRIVATE ${CMAKE_BINARY_DIR}/app/include src)
 
-target_sources(app PRIVATE src/main.c)
+# Get all files in app directory
+file( GLOB_RECURSE
+  APP_SOURCES
+  RELATIVE
+  ${CMAKE_CURRENT_LIST_DIR}
+  src/*.c*
+)
+
+target_sources(app PRIVATE ${APP_SOURCES})
