--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,7 +1,9 @@
-#-------------------------------------------------------------------------------
+#--------------------------------------------------------------------
 # Zephyr Example Application
 #
 # Copyright (c) 2021 Nordic Semiconductor ASA
+# Copyright (c) 2023 Toost Solutions
+
 # SPDX-License-Identifier: Apache-2.0
 
 cmake_minimum_required(VERSION 3.13.1)
@@ -15,7 +17,24 @@ set(BOARD myboard)
 
 find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
 
-project(app LANGUAGES C VERSION 1.0.0)
+# Get the latest git tag without 'v' prefix
+execute_process(
+    COMMAND bash -c "git describe --abbrev=0 --tags 2>/dev/null \
+                     | sed 's/^v//'"
+  WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+  OUTPUT_VARIABLE APP_VERSION
+  OUTPUT_STRIP_TRAILING_WHITESPACE
+)
+
+# Set a default value for APP_VERSION if it's not obtained from git tags
+if(NOT APP_VERSION)
+  set(APP_VERSION "0.0.0")
+endif()
+
+message("-- App version: ${APP_VERSION}")
+
+# Here the firmware version is defined. This ends up in app_version.hpp after a build
+project(app VERSION ${APP_VERSION})
 
 configure_file(app_version.h.in ${CMAKE_BINARY_DIR}/app/include/app_version.h)
 target_include_directories(app PRIVATE ${CMAKE_BINARY_DIR}/app/include src)
