feat: switch to STM b_u585i_iot02a as default

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Build firmware
         working-directory: app
         run: |
-          west build -b myboard
+          west build -b b_u585i_iot02a
 
       - name: Build SBOM
         working-directory: app
